Add GUI
1. Created Main.java, MainWindow.java, DialogBox.java in doopies.userinterface package for GUI implementation.
2. Shifted Doopies.java to doopies.userinterface package.
3. Edited Doopies.java and Ui.java to match the GUI inplementation.
4. Added resources file with images and view file in it for FXML and image items.